# neneta

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenCL.cmake
configuration/: configuration.xml  configuration_win.xml  kernels.xml  network_params.xml  network_params_mnist_1xCL_1xFC_1xPR_1xSM.xml  network_params_mnist_1xCL_1xFC_1xSM.xml  network_params_mnist_1xSM.xml  network_params_mnist_1xfc_1xsm.xml  network_params_mnist_2xFC_1xSM.xml  network_params_mnist_COMPLEX_1xCL_1xFC_1xPR_1xSM.xml  network_params_mnist_COMPLEX_1xFC_1xFC.xml  network_params_mnist_COMPLEX_1xFC_1xPR_1xSM.xml
src/neneta/: Neneta.cpp  Neneta.h  main.cpp
subcomp/: CMakeLists.txt
subcomp/common/: CMakeLists.txt
subcomp/common/include/cmn/: Types.h
subcomp/confighandler/: CMakeLists.txt
subcomp/confighandler/include/conf/: Configuration.h  ConfigurationReader.h  ConvLayerConfiguration.h  ErrorCalculationLayerConfiguration.h  FCLayerConfiguration.h  FFTConvLayerConfiguration.h  FourierConfiguration.h  IConfiguration.h  InputLayerConfiguration.h  KernelConfiguration.h  LayerConfiguration.h  NetworkConfiguration.h  PoolingLayerConfiguration.h  ProjectionLayerConfiguration.h  SoftMaxLayerConfiguration.h
subcomp/confighandler/src/conf/: ConfigurationReader.cpp  ConvLayerConfiguration.cpp  ErrorCalculationLayerConfiguration.cpp  FCLayerConfiguration.cpp  FFTConvLayerConfiguration .cpp  FourierConfiguration.cpp  InputLayerConfiguration.cpp  KernelConfiguration.cpp  NetworkConfiguration.cpp  PoolingLayerConfiguration.cpp  ProjectionLayerConfiguration.cpp  SoftMaxLayerConfiguration.cpp
subcomp/gpgpu/: CMakeLists.txt
subcomp/gpgpu/include/gpu/: IOpenCLChainableExecutionPlan.h  IOpenCLInputExecutionPlan.h  IOpenCLOutputExecutionPlan.h  OpenCLBasicExecutionPlan.h  OpenCLContext.h  OpenCLExecutionPlan.h  OpenCLKernel.h  OpenCLProgram.h
subcomp/gpgpu/src/gpu/: OpenCLContext.cpp  OpenCLExecutionPlan.cpp  OpenCLKernel.cpp  OpenCLProgram.cpp
subcomp/imagehandler/: CMakeLists.txt
subcomp/imagehandler/include/imh/: DispatcherEvent.h  IImageDispatcher.h  IImageProcessor.h  IPersistanceClient.h  ImageDispatcher.h  MNISTImageDispatcher.h
subcomp/imagehandler/src/imh/: IImageDatabase.h  ImageDispatcher.cpp  ImageNetDatabase.cpp  ImageNetDatabase.h  MNISTImageDispatcher.cpp  MNISTImageDispatcher.cpp.ST8720  ThreadPool.cpp  ThreadPool.h
subcomp/imagehandler/test/: CMakeLists.txt  ImageHandlerTest.cpp  TestMain.cpp  ThreadPoolTest.cpp
subcomp/imageprocessing/: CMakeLists.txt
subcomp/imageprocessing/include/ip/: Image.h
subcomp/imageprocessing/src/ip/: Image.cpp
subcomp/logging/: CMakeLists.txt
subcomp/logging/include/log/: Logging.h
subcomp/logging/src/log/: Logging.cpp
subcomp/neuralnetwork/: CMakeLists.txt
subcomp/neuralnetwork/include/net/: ConvLayer.h  ErrorCalculationLayer.h  FCLayer.h  FFTConvLayer.h  FourierTransform.h  IPersistedLayer.h  InputLayer.h  InverseFourierTransform.h  ProjectionLayer.h  SoftMaxLayer.h  SpectralPoolingLayer.h
subcomp/neuralnetwork/src/net/: 2x2FFT.cl  Backpropagation.cl  ComplexFunctions.cl  ComplexFunctions.clh  ConvLayer.cl  ConvLayer.cpp  ErrorCalculationLayer.cl  ErrorCalculationLayer.cpp  FCLayer.cl  FCLayer.cpp  FFTConvLayer.cpp  FourierTransform.cpp  InputLayer.cpp  InverseFourierTransform.cpp  Kernels.clh  MatrixOperations.cl  ProjectionLayer.cl  ProjectionLayer.cpp  SoftMaxLayer.cl  SoftMaxLayer.cpp  SpectralPoolingLayer.cpp  Utils.cpp  Utils.h
subcomp/neuralnetwork/test/: BackpropagationTest.cpp  CMakeLists.txt  ConvLayerBpMCTest.cpp  ConvLayerBpTests.cpp  ConvLayerTests.cpp  FCLayerTests.cpp  NeuralNetworkTests.cpp  PoolingLayerTests.cpp  ProjectionLayerTests.cpp  SoftMaxLayerTests.cpp  TestMain.cpp
subcomp/persistance/: CMakeLists.txt
subcomp/persistance/include/pers/: Persistance.h
subcomp/persistance/src/pers/: Persistance.cpp
subcomp/plotting/: CMakeLists.txt
subcomp/plotting/include/plot/: Plotter.h
subcomp/plotting/src/plot/: Plotter.cpp
