project(neneta)
cmake_minimum_required(VERSION 2.8)

#Add subdirectories
add_subdirectory(logging)
add_subdirectory(imagehandler)
add_subdirectory(persistance)
add_subdirectory(confighandler)
add_subdirectory(imageprocessing)
add_subdirectory(gpgpu)
add_subdirectory(neuralnetwork)
add_subdirectory(plotting)
add_subdirectory(common)

